<resources>
    <string name="app_name">Frost BaR</string>
    <string name="kernel_pref_title">Kernel</string>
    <string name="msim_pref_title">Phone</string>
    <string name="rec_pref_title">Recovery</string>
    <string name="backup_epref_title">Backup Kernel</string>
    <string name="backup_mod_epref_title">Backup Kernel with Modules</string>
    <string name="restore_epref_title">Flash/Restore Kernel</string>
    <string name="restore_mod_epref_title">Restore Kernel with Modules</string>
    <string name="backup_mod_epref_summary">Backup currently running kernel with modules. Modules are the one responsible for basic features working like WiFi. You can use this option when you backup frost for the first time.</string>
    <string name="backup_epref_summary">Backup currently running kernel</string>
    <string name="restore_epref_summary">Restore previously backed up kernel.Suggestion: Reboot after restore completes.</string>
    <string name="restore_mod_epref_summary">Restore previously backed up kernel with modules.Suggestion: Reboot after restore completes.</string>
    <string name="msim_spref_title">Enable/Disable DualSim</string>
    <string name="msim_spref_summary">Toggle between Sim states. To avoid confusion when switch is ON Dual-Sim is ON, when switch is OFF Dual-Sim is OFF</string>
    <string name="action_settings">Settings</string>
    <string name="rec_epref_title">Backup Recovery</string>
    <string name="rec_lpref_title">Switch Recovery</string>
    <string name="rec_lpref_summary">You can switch between recoveries by placing your recovery image inside Internal storage/Frostbar/recovery.</string>
    <string name="rec_epref_summary">Backup the current recovery that you are using.</string>
    <string name="delete_all_backups">Delete Backups</string>
    <string name="delete_summary">Clicking on this option will delete all backup images.</string>
    <string name="gplus_profile">https://plus.google.com/+AshishShekar/posts</string>
    <string name="select_device">Select your device</string>
    <string name="title_activity_device_selection">DeviceSelectionActivity</string>
    <string name="device_selection">Select your device from the below dropdown to proceed :</string>

    <string name="hello_world">Hello world!</string>
</resources>
